{
    "name": "MouseControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "714534af-4dee-4e2a-b0eb-1ed6bce26686",
            "actions": [
                {
                    "name": "PanActive",
                    "type": "PassThrough",
                    "id": "807e668c-22ea-48ac-8ee2-1afacbbb53d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Drag",
                    "type": "PassThrough",
                    "id": "19ad1943-db14-49c5-81c9-1ee424d1c72a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "a71d16a3-7d5b-462d-9689-43c724793af1",
                    "expectedControlType": "Axis",
                    "processors": "Normalize(min=-1,max=1)",
                    "interactions": ""
                },
                {
                    "name": "RotateActive",
                    "type": "PassThrough",
                    "id": "63851f1f-84a6-4510-be48-25beb0560357",
                    "expectedControlType": "Button",
                    "processors": "Normalize(min=-1,max=1)",
                    "interactions": ""
                },
                {
                    "name": "AlternativeMoveActive",
                    "type": "PassThrough",
                    "id": "6499118a-b06f-462f-98c2-e37b126abdbd",
                    "expectedControlType": "Button",
                    "processors": "Normalize(min=-1,max=1)",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4de4cf43-3ca4-4a75-99af-72f72a4cc9cb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "069d4306-8a42-460b-932f-c1dbaf6a583e",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Normalize(min=-1,max=1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "457d6b27-6e2f-4628-b793-8250ae108ca8",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b30b89d-e79b-4a0f-a949-a6419b010065",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d3f75f0-419d-49df-9088-05c374206540",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlternativeMoveActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}